src/main/java/com/example/board/global/error/exception/UserNotFoundException.java
package com.example.board.global.error.exception;

public class UserNotFoundException extends BusinessException {
    public UserNotFoundException() {
        super(ErrorCode.USER_NOT_FOUND);
    }
}
